Finished updating matrix view so that there is one matrix per job space that can be accessed by going to the corresponding jobspace page and clicking on the matrix view button. Fixed formatting on matrix page so the scrolling benchmark column no longer overlaps the first column. Going to write some unit tests for the matrix classes.
git-svn-id: https://svn.divms.uiowa.edu/repos/clc/projects/starexec/dev/branches/fb1/starexec@20726 bd178f5f-7bea-4014-844f-495ca19b8805

--- a/WebContent/css/details/jobMatrixView.css
+++ b/WebContent/css/details/jobMatrixView.css
@@ -16,7 +16,7 @@
 	margin: 10px 0 0 0;
 }
 
-.dataTables_scrollBody .jobMatrix thead {
+.dataTables_scrollBody #jobMatrix thead {
 	display: none;
 }
 
